--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
     "name": "PondController-node-red-mac",
     "description": "A Node-RED Project",
     "version": "0.0.1",
-    "dependencies": {},
+    "dependencies": {
+        "node-red-dashboard": "3.1.3"
+    },
     "node-red": {
         "settings": {
             "flowFile": "flows.json",
